# RELite

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: grammar.txt
examples/: demo.prql
include/backend/: buffer_pool.hpp  disk_manager.hpp  durability.hpp  page.hpp  page_guard.hpp
include/frontend/: ast.hpp  catalog.hpp  db.hpp  lexer.hpp  parser.hpp  semantic_analyzer.hpp  token.hpp
include/index/: bloom_filter.hpp  bplus_tree.hpp  disk_bplus_tree.hpp  index_manager.hpp
include/txn/: lock_manager.hpp  transaction_manager.hpp  wal.hpp
include/vm/: column_store.hpp  executor.hpp  executor_engine.hpp  expression_eval.hpp  record_id.hpp  result_set.hpp  rewrite.hpp  storage_engine.hpp  table_manager.hpp  tuple.hpp  value.hpp  vectorized.hpp  version_store.hpp
src/backend/: buffer_pool.cpp  disk_manager.cpp  durability.cpp  page.cpp
src/frontend/: ast.cpp  catalog.cpp  db.cpp  lexer.cpp  parser.cpp  semantic_analyzer.cpp
src/index/: bloom_filter.cpp  bplus_tree.cpp  disk_bplus_tree.cpp  index_manager.cpp
src/txn/: lock_manager.cpp  transaction_manager.cpp  wal.cpp
src/vm/: column_store.cpp  executor.cpp  executor_engine.cpp  expression_eval.cpp  rewrite.cpp  table_manager.cpp  tuple.cpp  value.cpp  vectorized.cpp  version_store.cpp
tests/: column_store_test.cpp  disk_index_test.cpp  engine_test.cpp  features_test.cpp  index_test.cpp  lexer_test.cpp  optimizer_test.cpp  parser_test.cpp  phase5_test.cpp  phase6_test.cpp  semantic_test.cpp  storage_test.cpp  table_manager_test.cpp  txn_test.cpp  vectorized_test.cpp
tools/: benchmark.cpp
